--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
 
         multiDexEnabled true
 
-        buildConfigField "String", "BASE_URL", "\"http://data.police.uk/api\""
+        buildConfigField "String", "BASE_URL", "\"http://data.police.uk/api/\""
 
         jackOptions {
             enabled true
@@ -42,21 +42,25 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 ext {
     permissiondispatcher_version = '2.3.1'
     butterknife_version = '8.5.1'
-    androidSupportVersion = '25.1.1'
-    playServicesVersion = '10.0.1'
-    retrofitVersion = '1.8.0'
+    androidSupportVersion = '25.2.0'
+    playServicesVersion = '10.2.0'
+    retrofitVersion = '2.2.0'
     gsonVersion = '2.4'
     mapsUtilsVersion = '0.4.4'
     superTooltipsVersion = '3.0.0'
     timberVersion = '4.5.1'
     daggerVersion = '2.0'
-    rxAndroidVersion = '1.2.1'
-    rxJavaVersion = '1.1.6'
+    rxAndroidVersion = '2.0.1'
+    rxJavaVersion = '2.0.6'
     javaxAnnotationsVersion = '1.0'
     parcelerVersion = '1.1.6'
 }
@@ -66,7 +70,14 @@ dependencies {
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
     compile "com.google.android.gms:play-services-maps:$playServicesVersion"
     compile "com.google.android.gms:play-services-location:$playServicesVersion"
-    compile "com.squareup.retrofit:retrofit:$retrofitVersion"
+
+    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+
+    compile "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+    compile "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+
     compile "com.google.code.gson:gson:$gsonVersion"
     compile "com.google.maps.android:android-maps-utils:$mapsUtilsVersion"
     compile "com.nhaarman.supertooltips:library:$superTooltipsVersion"
@@ -81,9 +92,6 @@ dependencies {
 
     compile "com.google.dagger:dagger:$daggerVersion"
     annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
-
-    compile "io.reactivex:rxandroid:$rxAndroidVersion"
-    compile "io.reactivex:rxjava:$rxJavaVersion"
 
     provided "javax.annotation:jsr250-api:$javaxAnnotationsVersion"
 
