--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ android:
 
     # The SDK version used to compile your project
     - android-25
+
+    - extra-google-m2repository
+    - extra-android-m2repository
