--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ android:
     # The SDK version used to compile your project
     - android-25
 
-    - extra-google-m2repository
+    # - extra-google-m2repository
     - extra-android-m2repository
 
 env:
