--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ android:
     # The SDK version used to compile your project
     - android-25
 
-    # - extra-google-m2repository
+    - extra-google-m2repository
     - extra-android-m2repository
 
 env:
   global:
-    - GRADLE_OPTS="-Xms128m"
+    - GRADLE_OPTS="-Xms128m -Xmx512m -XX:MaxPermSize=512m"
