--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,6 @@ android {
         multiDexEnabled true
 
         buildConfigField "String", "BASE_URL", "\"http://data.police.uk/api/\""
-
-        jackOptions {
-            enabled true
-        }
     }
 
     signingConfigs {
@@ -42,10 +38,8 @@ android {
         }
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+    android.compileOptions.sourceCompatibility 1.8
+    android.compileOptions.targetCompatibility 1.8
 
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
