--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
 
     configure(android.lintOptions) {
         abortOnError false
@@ -52,47 +52,39 @@ ext {
     androidSupportVersion = '25.3.0'
     playServicesVersion = '10.2.0'
     retrofitVersion = '2.2.0'
-    gsonVersion = '2.4'
-    mapsUtilsVersion = '0.4.4'
+    gsonVersion = '2.8.0'
+    mapsUtilsVersion = '0.5'
     superTooltipsVersion = '3.0.0'
     timberVersion = '4.5.1'
     daggerVersion = '2.0'
     rxAndroidVersion = '2.0.1'
-    rxJavaVersion = '2.0.6'
+    rxJavaVersion = '2.0.9'
     javaxAnnotationsVersion = '1.0'
     parcelerVersion = '1.1.6'
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile "com.android.support:appcompat-v7:$androidSupportVersion"
     compile "com.google.android.gms:play-services-maps:$playServicesVersion"
     compile "com.google.android.gms:play-services-location:$playServicesVersion"
-
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
     compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     compile "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
-
     compile "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
     compile "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
-
     compile "com.google.code.gson:gson:$gsonVersion"
     compile "com.google.maps.android:android-maps-utils:$mapsUtilsVersion"
     compile "com.nhaarman.supertooltips:library:$superTooltipsVersion"
     compile "com.android.support:design:$androidSupportVersion"
     compile "com.jakewharton.timber:timber:$timberVersion"
-
     compile "com.jakewharton:butterknife:$butterknife_version"
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife_version"
-
     compile "com.github.hotchemi:permissionsdispatcher:$permissiondispatcher_version"
     annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:$permissiondispatcher_version"
-
     compile "com.google.dagger:dagger:$daggerVersion"
     annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
-
     provided "javax.annotation:jsr250-api:$javaxAnnotationsVersion"
-
     compile "org.parceler:parceler-api:$parcelerVersion"
     annotationProcessor "org.parceler:parceler:$parcelerVersion"
 }
