--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ env:
   global:
     - GRADLE_OPTS="-Xms128m -Xmx512m -XX:MaxPermSize=512m"
 
-script: ./gradlew clean assembleDebug
+script: ./gradlew clean test assembleDebug
